--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignore csv
+*.csv
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,jupyternotebooks,windows,visualstudiocode,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,jupyternotebooks,windows,visualstudiocode,pycharm
 
